--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
+    "mock": "json-server --watch mock/db.json",
+    "mockdev": "npm run mock && npm run dev",
     "unit": "jest --config test/unit/jest.conf.js --coverage",
     "e2e": "node test/e2e/runner.js",
     "test": "npm run unit && npm run e2e",
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
@@ -33,16 +36,20 @@
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.0",
     "eventsource-polyfill": "^0.9.6",
+    "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "http-proxy-middleware": "^0.17.4",
     "jest": "^21.2.0",
     "jest-serializer-vue": "^0.3.0",
+    "json-server": "^0.12.1",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
     "nightwatch": "^0.9.12",
     "node-notifier": "^5.1.2",
+    "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
@@ -59,6 +66,7 @@
     "vue-template-compiler": "^2.5.2",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
+    "webpack-dev-middleware": "^1.12.2",
     "webpack-dev-server": "^2.9.1",
     "webpack-merge": "^4.1.0"
   },
